Modificar README y ajuste de clases

--- a/clase-3/src/App.css
+++ b/clase-3/src/App.css
@@ -1,15 +1,6 @@
-.azul {
-  color: blue;
+.verde {
+  color: green;
 }
-
-.navBar{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color: black;
-  color: white;
-}
-
 .App {
   text-align: center;
 }
